@@ -1,1 +1,1 @@
-DIST schedule-0.14.tar.gz 21505 SHA256 656c7a8f70f288310b228eceb2b39989c1f103ef3aea20fd2a85e032e9cbdb31 SHA512 22bce20672d6adf8ceff8d2b62ae532a1ae275adae2fcfe5990ec948bfeb85a8a2e2cfe6614afbd7a24c8d6e611e5aa4dcee26098795eb27468681681524249d WHIRLPOOL b3f201e6fbf3eeacfb2e49229fd338ea0ec820d67c6171f2c9df70c8376bca7dbb577f170d0a828ad15eff829beea4c38e9c3f97cd8dddc5d1e4f74620be7973
+DIST schedule-0.15.tar.gz 23398 SHA256 2233d4af8d11706e4a13b74e677b7b4f39a9fa28d8414f70e64a101fcb187b3d SHA512 e05818329df17b346c91bbfb6790c3029499ca61af7c7d9c298dca5b69b94ae5fd92509b58caf15e8c7782a4041acd49f4adabc7f43d8dc64227364353a82151 WHIRLPOOL ab94142ba60dc0257e89319f4c85bf31c66ded645b5a7e62b3b13b08764564f2abc6536dedbb63a2999cb612f2b2d4e1b019f5cad57b74ed693e974b10bc9b67
