@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*starter-0.15 (08 Aug 2014)
+
+  08 Aug 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild. Add recommendations for encryption
+
 *starter-0.14 (02 Aug 2014)
 
   02 Aug 2014; Martin Väth <martin@mvath.de>:
